# cs2-dumper

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  process.rs
src/cs2/: modules.rs
src/game/: modules.rs
src/platform/: linux.rs  mod.rs  windows.rs
